// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component renders English correctly 1`] = `
<div>
  <nav
    class="sc-bdfBQB gNgBQE"
  >
    <div
      aria-controls="primary-menu"
      aria-expanded="false"
      class="sc-gsTEea cbmXIS"
    >
      <div
        class="sc-dlfnuX eWZRzl"
      />
      <div
        class="sc-dlfnuX eWZRzl"
      />
      <div
        class="sc-dlfnuX eWZRzl"
      />
    </div>
    <ul
      class="sc-hKgJUU jdxjcQ"
      id="primary-menu"
    >
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-jSgvzq kPPAlD"
          href="/en"
        >
          Front Page
        </a>
      </li>
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-gKseQn bSKLbB"
          href="/en#portfolio"
        >
          Portfolio
        </a>
      </li>
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-gKseQn bSKLbB"
          href="/en#contact"
        >
          Contact
        </a>
      </li>
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-jSgvzq kPPAlD"
          href="/en/blog"
        >
          Blog
        </a>
      </li>
    </ul>
  </nav>
  ,
</div>
`;

exports[`Navigation component renders Finnish correctly 1`] = `
<div>
  <nav
    class="sc-bdfBQB gNgBQE"
  >
    <div
      aria-controls="primary-menu"
      aria-expanded="false"
      class="sc-gsTEea cbmXIS"
    >
      <div
        class="sc-dlfnuX eWZRzl"
      />
      <div
        class="sc-dlfnuX eWZRzl"
      />
      <div
        class="sc-dlfnuX eWZRzl"
      />
    </div>
    <ul
      class="sc-hKgJUU jdxjcQ"
      id="primary-menu"
    >
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-jSgvzq kPPAlD"
          href="/"
        >
          Etusivu
        </a>
      </li>
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-gKseQn bSKLbB"
          href="/#portfolio"
        >
          Portfolio
        </a>
      </li>
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-gKseQn bSKLbB"
          href="/#yhteystiedot"
        >
          Yhteystiedot
        </a>
      </li>
      <li
        class="sc-eCstlR cjNYiw"
      >
        <a
          class="sc-jSgvzq kPPAlD"
          href="/blogi"
        >
          Blogi
        </a>
      </li>
    </ul>
  </nav>
  ,
</div>
`;
